--- a/softeng.html
+++ b/softeng.html
@@ -3,6 +3,7 @@
 <head>
     <!--[if lt IE 9]>
     <script> document.createElement("keyword"); </script>
+
     <![endif]-->
     <meta charset="UTF-8">
     <title> Software Engineering </title>
@@ -30,6 +31,15 @@
             cursor: pointer;
             padding: 15px;
             border-radius: 10px;
+        }
+
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 8px;
         }
 
         #topBtn:hover {
@@ -78,7 +88,11 @@ Table of contents
         <li><a href="#system2"> Dependability </a></li>
         <li><a href="#system3"> Faults and Failures </a></li>
     </ul></li>
-
+    <li><a href="#agile"> Rapid and Extreme Programming </a><ul>
+        <li><a href="#agile1"> Rapid Software Development </a></li>
+        <li><a href="#agile2"> Agile Methods </a></li>
+        <li><a href="#agile3"> Rapid Application Development </a></li>
+    </ul></li>
 </ol>
 <hr/> <!----------------------------------------------------------------------------------->
 
@@ -433,7 +447,205 @@ Table of contents
 
 <hr/> <!----------------------------------------------------------------------------------->
 
+<h2 id="agile"> 5 &ndash; Rapid and Extreme Programming </h2>
+<h3 id="agile1"> 5.1 &ndash; Rapid Software Development (RSD) </h3>
+<p><keyword>RSD</keyword> is due to the fact that business environments always change, so the business have to respond to new opportunities and competition. This is normally used for small and medium sized systems. </p>
+<p> Characteristics </p>
+<ul>
+    <li>Processes of <strong>specification</strong>, <strong>design</strong> and <strong>implementation</strong> are <keyword>concurrent</keyword>.</li>
+    <li>System is developed in a series of <keyword>increments</keyword>.</li>
+    <li>End-users evaluate each increment and make proposals for later increments.</li>
+    <li>Things may easily go wrong so <strong>best suited</strong> for <keyword>experienced</keyword> and <keyword>skillful</keyword> development teams. </li>
+</ul>
+<p> Waterfall model is <keyword>impractical</keyword> here.</p>
+<h4> Iterative development process </h4>
+<img src="images/softeng/agile1.JPG"/>
+
+<h3 id="agile2"> 5.2 &ndash; Agile Methods </h3>
+<ul>
+    <li> Focus on the code rather than design </li>
+    <li> Iterative approach </li>
+    <li> Intended to deliver working software quickly and evolve quickly </li>
+</ul>
+<p> Agile methods are <strong>best suited</strong> to small or medium sized business systems. </p>
+<p><strong>Principles of Agile Methods</strong></p>
+<ul>
+    <li> <keyword>Customer involvement</keyword> <ul>
+        <li> Customers are to provide and prioritise new requirements and evaluate iterations. </li>
+    </ul> </li>
+    <li> <keyword>Incremental delivery</keyword> <ul>
+        <li> Software is developed in increments. </li>
+    </ul> </li>
+    <li> <keyword>People not Process</keyword> <ul>
+        <li> Team members should be allowed to develop their own ways of working. </li>
+    </ul> </li>
+    <li> <keyword>Embrace Change</keyword> <ul>
+        <li> Design the system to accommodate constant changes. </li>
+    </ul> </li>
+    <li> <keyword>Maintain Simplicity</keyword> <ul>
+        <li> Actively work to eliminate complexity from the system. </li>
+    </ul> </li>
+</ul>
+
+<h4> Problems with Agile Method</h4>
+<ul>
+    <li> Can be difficult to keep the <keyword>interest</keyword> of involved customers. </li>
+    <li> Team members <keyword>not suited</keyword> for the method. </li>
+    <li> <keyword>Prioritising changes</keyword> can be difficult where there are multiple stakeholders. </li>
+    <li> <keyword>Maintaining simplicity</keyword> requires extra work. </li>
+    <li> <keyword>Contracts</keyword> </li>
+</ul>
+
+<h4> Extreme Programming (XP) </h4>
+<p> This is an agile method that takes an 'extreme' approach to iterative development. </p>
+<ul>
+    <li> New versions may be built <keyword>several times per day</keyword>. </li>
+    <li> Increments are delivered to customers <keyword>every 2 weeks</keyword>. </li>
+    <li> Build is only accepted if <keyword>tests run successfully</keyword>. </li>
+</ul>
+
+<p><strong>Five Values of XP</strong></p>
+<ul>
+    <li><keyword>Communication</keyword><ul>
+        <li> Nothing can be done well without communicating. </li>
+    </ul></li>
+    <li><keyword>Simplicity</keyword><ul>
+        <li> Do the simplest thing that could possibly work. </li>
+    </ul></li>
+    <li><keyword>Feedback</keyword><ul>
+        <li> Put valuable requirements into production as early as possible. </li>
+    </ul></li>
+    <li><keyword>Courage</keyword><ul>
+        <li> Do the right thing! Throw away code that is no longer needed. </li>
+    </ul></li>
+    <li><keyword>Respect</keyword><ul>
+        <li> Team members must respect other's work. </li>
+    </ul></li>
+</ul>
+
+<h4> The XP Release Cycle </h4>
+<img src="images/softeng/agile2.JPG"/>
+
+<h4> XP Practices </h4>
+<ul>
+    <li><keyword>Incremental Planning</keyword><ul>
+        <li> Requirements are recorded on <strong>story cards</strong> that focuses on <strong>user needs</strong>.</li>
+        <li> Stories should be prioritised and chosen <strong>by the customer</strong>. </li>
+        <li> Break down each story into tasks. <ul>
+            <li> Each task has estimates of <em>schedule</em> and <em>cost</em>. </li>
+        </ul></li>
+    </ul></li>
+    <li><keyword>Small Releases</keyword><ul>
+        <li> Focus on releasing minimal functionality. </li>
+        <li> Each increment adds more functionality. </li>
+    </ul></li>
+    <li><keyword>Simple Design</keyword><ul>
+        <li> Design just enough to meet requirements. </li>
+        <li> Even though it might lead to <strong>poor design</strong> and <strong>multiple refactorings</strong>. </li>
+    </ul></li>
+    <li><keyword>Test-first Development</keyword><ul>
+        <li> Automated test framework is used to write tests for a new piece of functionality <strong>before</strong> the             functionality itself is implemented. <ul>
+            <li> This is to <strong>clarify</strong> the requirements. </li>
+            <li> Tests are written as <strong>programs</strong> rather than data. </li>
+            <li> Tests are run when new functionality is added to ensure the update doesn't introduce errors. </li>
+        </ul></li>
+    </ul></li>
+    <li><keyword>Refactoring</keyword><ul>
+        <li> Refactor continuously as soon as an improvement is found. </li>
+        <li> This is to keep code <strong>simple</strong> and <strong>maintainable</strong>. </li>
+    </ul></li>
+    <li><keyword>Pair Programming</keyword><ul>
+        <li> Developers work in <strong>pairs</strong>. <ul>
+            <li> Develop common ownership and spreads knowledge. </li>
+            <li> Serves as an informal review process. </li>
+            <li> Encourages refactoring. </li>
+        </ul></li>
+    </ul></li>
+    <li><keyword>Collective Ownership</keyword><ul>
+        <li> Everybody works on everything. No <strong>islands of expertise</strong>. </li>
+    </ul></li>
+    <li><keyword>Continuous Integration</keyword><ul>
+        <li> Work is integrated to the system as soon as it is finished. </li>
+        <li> All of the unit tests in the system must pass. </li>
+    </ul></li>
+    <li><keyword>Sustainable Pace</keyword><ul>
+        <li> Large amounts of <strong>overtime</strong> are not considered acceptable. </li>
+        <li> This reduces the <strong>net productivity</strong> of code. </li>
+    </ul></li>
+    <li><keyword>On-site customer</keyword><ul>
+        <li>End-users and customers are <strong>members</strong> of the development team. </li>
+    </ul></li>
+</ul>
+
+<h4> Critiques of XP </h4>
+<ul>
+    <li><strong>Code-centered</strong> rather than design-centered, bad for large systems. </li>
+    <li>Not producing <strong>readable code</strong>.</li>
+    <li>Lack of <strong>structured</strong> review process.</li>
+    <li><strong>Quality through testing</strong>.</li>
+    <li>Limited to a <strong>narrow</strong> segment of software work.</li>
+    <li>Limited <strong>management support</strong>.</li>
+    <li>Lack of <strong>transition support</strong>.</li>
+</ul>
+
+<h4> User Stories and Use Cases </h4>
+<table>
+    <tr>
+        <th> User Story </th>
+        <th> Use Case </th>
+    </tr>
+    <tr>
+        <td> Small scale and easy-to-use presentation of information. </td>
+        <td> Describes process and steps in detail. </td>
+    </tr>
+    <tr>
+        <td> Formulated in everyday language of the user, no technical words. </td>
+        <td> Can use technical words. </td>
+    </tr>
+    <tr>
+        <td> Can be accompanied by Acceptance Testing procedures. </td>
+        <td> Can be delivered in a stand-alone document. </td>
+    </tr>
+    <tr>
+        <td> For customers </td>
+        <td> For developers </td>
+    </tr>
+</table>
+
+<h3 id="agile3"> 5.3 &ndash; Rapid Application Development (RAD) </h3>
+<p> This development includes <keyword>Visual Development</keyword> and <keyword>COTS</keyword>.</p>
+<ul>
+    <li> Designed to develop <keyword>data-intensive</keyword> business applications. </li>
+    <li> Rely on programming and presenting information from a <keyword>database</keyword>. </li>
+    <li> Using <keyword>special tools</keyword> and <keyword>programming languages</keyword>. </li>
+</ul>
+<p> RAD environments include support for <keyword>interface generation</keyword> interactively: form <strong>definition</strong> using drag and drop techniques; form <strong>linking</strong> and form <strong>verification</strong>. </p>
+
+<h4> Visual Programming </h4>
+<p> Scripting languages such as Visual Basic. Prototype is created from an interface. </p>
+<p> An example would be like below </p>
+<img src="images/softeng/agile3.JPG"/>
+
+<h4>Problems with Visual Development</h4>
+<ul>
+    <li> Difficult to coordinate <keyword>team-based</keyword> development. </li>
+    <li> No explicit system architecture. </li>
+    <li> Can have maintainability problems. </li>
+    <li> Maintenance has to be done through original environment. </li>
+    <li> Hard to <keyword>integrate</keyword> with other systems. </li>
+</ul>
+
+<h4> COTS Reuse </h4>
+<p> As mentioned before in <a href="#models3">here</a>, COTS refers to <keyword>already available</keyword> applications. <keyword>Configure</keyword> and <keyword>link</keyword> existing off the shelf systems for an effective approach to rapid development. </p>
+
+<p> Some application prototypes can be created by developing a <keyword>compound document</keyword>. This document has <keyword>active elements</keyword> like a spreadsheet that <strong>allows user computations</strong>. Each active elements has an <keyword>associated application</keyword> which is invoked when that element is selected. The document itself is the <keyword>integrator</keyword> for different applications. </p>
+
 <hr/> <!----------------------------------------------------------------------------------->
+
+
+
+
+
 <!-- Utils -->
 <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
 <script>
